tests/positive/exceptions/catch_shift_error/input.ci
void main() {
    try {
        int x = 1 << 64;
        print("unreachable\n");
    } catch (RuntimeException e) {
        print("caught: " + e.message + "\n");
    }
    try {
        int y = 1 << -1;
        print("unreachable\n");
    } catch (RuntimeException e) {
        print("caught: " + e.message + "\n");
    }
    print("done\n");
}
