tests/negative/semantic/reserved_float_constant_name/input.ci
void main() {
    int M_PI = 1;
}
